--- a/index.html
+++ b/index.html
@@ -205,6 +205,13 @@
 </tr>
 
 <tr>
+<td>3R Cosmix</td>
+<td>1984</td>
+<td>Starhead</td>
+<td><a href="StarheadComix/StarheadComix.html">Details</a></td>
+</tr>
+
+<tr>
 <td>3x3 Eyes</td>
 <td>1991</td>
 <td>Innovation</td>
@@ -1689,6 +1696,13 @@
 <td>1992</td>
 <td>Kitchen Sink</td>
 <td><a href="KitchenSinkPress/KitchenSinkPress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Acidboy</td>
+<td>1996</td>
+<td>Starhead</td>
+<td><a href="StarheadComix/StarheadComix.html">Details</a></td>
 </tr>
 
 <tr>
@@ -4269,6 +4283,13 @@
 </tr>
 
 <tr>
+<td>Amazing Adventures Of Ace International</td>
+<td>1993</td>
+<td>Starhead</td>
+<td><a href="StarheadComix/StarheadComix.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Amazing Adventures Of Professor Jones</td>
 <td>1996</td>
 <td>Antarctic Press</td>
@@ -5865,6 +5886,13 @@
 </tr>
 
 <tr>
+<td>Armageddonquest</td>
+<td>1994</td>
+<td>Starhead</td>
+<td><a href="StarheadComix/StarheadComix.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Armor</td>
 <td>1985</td>
 <td>Continuity</td>
@@ -6282,6 +6310,13 @@
 <td>2010</td>
 <td>Image</td>
 <td><a href="Image/image.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Artistic Licentiousness</td>
+<td>1991</td>
+<td>Starhead</td>
+<td><a href="StarheadComix/StarheadComix.html">Details</a></td>
 </tr>
 
 <tr>
@@ -7790,6 +7825,13 @@
 </tr>
 
 <tr>
+<td>Badman</td>
+<td>1967</td>
+<td>Topps</td>
+<td><a href="Topps/Topps.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Badmen Of The West</td>
 <td>1951</td>
 <td>Avon</td>
@@ -7983,6 +8025,13 @@
 <td>2012</td>
 <td>IDW</td>
 <td><a href="IDW/IDW.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Bantam</td>
+<td>1967</td>
+<td>Topps</td>
+<td><a href="Topps/Topps.html">Details</a></td>
 </tr>
 
 <tr>
@@ -9280,6 +9329,13 @@
 </tr>
 
 <tr>
+<td>Bezango Obscuro</td>
+<td>1994</td>
+<td>Starhead</td>
+<td><a href="StarheadComix/StarheadComix.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Bible</td>
 <td>-600</td>
 <td>Antiquity</td>
@@ -9424,6 +9480,13 @@
 <td>2018</td>
 <td>Image</td>
 <td><a href="Image/image.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Big Mouth</td>
+<td>1992</td>
+<td>Starhead</td>
+<td><a href="StarheadComix/StarheadComix.html">Details</a></td>
 </tr>
 
 <tr>
@@ -9725,6 +9788,13 @@
 <td>1999</td>
 <td>Antarctic Press</td>
 <td><a href="AntarcticPress/AntarcticPress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Bitch Bitch Bitch</td>
+<td>1994</td>
+<td>Starhead</td>
+<td><a href="StarheadComix/StarheadComix.html">Details</a></td>
 </tr>
 
 <tr>
@@ -10696,6 +10766,13 @@
 </tr>
 
 <tr>
+<td>Blood Clot</td>
+<td>1987</td>
+<td>Starhead</td>
+<td><a href="StarheadComix/StarheadComix.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Blood Club</td>
 <td>1992</td>
 <td>Kitchen Sink</td>
@@ -11032,6 +11109,13 @@
 </tr>
 
 <tr>
+<td>Blunder Woman</td>
+<td>1967</td>
+<td>Topps</td>
+<td><a href="Topps/Topps.html">Details</a></td>
+</tr>
+
+<tr>
 <td>BMWFilms.com's The Hire</td>
 <td>2005</td>
 <td>Dark Horse</td>
@@ -11224,6 +11308,13 @@
 <td>2006</td>
 <td>Image</td>
 <td><a href="Image/image.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Bombast</td>
+<td>1993</td>
+<td>Topps</td>
+<td><a href="Topps/Topps.html">Details</a></td>
 </tr>
 
 <tr>
@@ -11693,6 +11784,13 @@
 <td>1993</td>
 <td>Publisher</td>
 <td><a href="Brainstorm/Brainstorm.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Bram Stoker's Dracula</td>
+<td>1992</td>
+<td>Topps</td>
+<td><a href="Topps/Topps.html">Details</a></td>
 </tr>
 
 <tr>
@@ -12592,6 +12690,13 @@
 </tr>
 
 <tr>
+<td>Bumbercomix</td>
+<td>1988</td>
+<td>Starhead</td>
+<td><a href="StarheadComix/StarheadComix.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Bummer</td>
 <td>1995</td>
 <td>Fantagraphics</td>
@@ -12830,6 +12935,13 @@
 </tr>
 
 <tr>
+<td>Cadillacs And Dinosaurs</td>
+<td>1994</td>
+<td>Topps</td>
+<td><a href="Topps/Topps.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Cadmus</td>
 <td>2017</td>
 <td>Antarctic Press</td>
@@ -13037,6 +13149,13 @@
 <td>2013</td>
 <td>Dark Horse</td>
 <td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Captive American</td>
+<td>1967</td>
+<td>Topps</td>
+<td><a href="Topps/Topps.html">Details</a></td>
 </tr>
 
 <tr>
@@ -15802,6 +15921,13 @@
 </tr>
 
 <tr>
+<td>Colin Upton's Big Black Thing</td>
+<td>1994</td>
+<td>Starhead</td>
+<td><a href="StarheadComix/StarheadComix.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Collected Adventures Of Captain Jack</a>
 <td>1995</td>
 <td>MU Press</td>
@@ -15841,6 +15967,13 @@
 <td>2001</td>
 <td>Drawn &amp; Quarterly</td>
 <td><a href="DrawnQuarterly/DrawnQuarterly.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Collier's Seattle Sketchbook</td>
+<td>1995</td>
+<td>Starhead</td>
+<td><a href="StarheadComix/StarheadComix.html">Details</a></td>
 </tr>
 
 <tr>
@@ -17507,6 +17640,13 @@
 <td>1999</td>
 <td>Vertigo</td>
 <td><a href="Vertigo/Vertigo.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Cruel And Unusual Punishment</td>
+<td>1993</td>
+<td>Starhead</td>
+<td><a href="StarheadComix/StarheadComix.html">Details</a></td>
 </tr>
 
 <tr>
@@ -20150,6 +20290,13 @@
 </tr>
 
 <tr>
+<td>Devil Stay Away From Me</td>
+<td>1994</td>
+<td>Starhead</td>
+<td><a href="StarheadComix/StarheadComix.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Devil Within</td>
 <td>2018</td>
 <td>Black Mask</td>
@@ -20364,6 +20511,13 @@
 <td>2009</td>
 <td>Boom!</td>
 <td><a href="Boom!/Boom!.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Die Laughing</td>
+<td>1993</td>
+<td>Starhead</td>
+<td><a href="StarheadComix/StarheadComix.html">Details</a></td>
 </tr>
 
 <tr>
@@ -20644,6 +20798,13 @@
 <td>2014</td>
 <td>IDW</td>
 <td><a href="IDW/IDW.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Diva Grafix &amp; Stories</td>
+<td>1993</td>
+<td>Starhead</td>
+<td><a href="StarheadComix/StarheadComix.html">Details</a></td>
 </tr>
 
 <tr>
@@ -21613,6 +21774,13 @@
 </tr>
 
 <tr>
+<td>Dr. Zomb's House Of Freaks</td>
+<td>1993</td>
+<td>Starhead</td>
+<td><a href="StarheadComix/StarheadComix.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Dracula</td>
 <td>1897</td>
 <td>Archibald Constable</td>
@@ -21627,10 +21795,24 @@
 </tr>
 
 <tr>
+<td>Dracula Chronicles</td>
+<td>1995</td>
+<td>Topps</td>
+<td><a href="Topps/Topps.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Dracula Lives!</td>
 <td>1973</td>
 <td>Marvel</td>
 <td><a href="DraculaLives/DraculaLives.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Dracula Versus Zorro</td>
+<td>1993</td>
+<td>Topps</td>
+<td><a href="Topps/Topps.html">Details</a></td>
 </tr>
 
 <tr>
@@ -21652,6 +21834,13 @@
 <td>2010</td>
 <td>Boom!</td>
 <td><a href="Boom!/Boom!.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Dracula: Vlad The Impaler</td>
+<td>1993</td>
+<td>Topps</td>
+<td><a href="Topps/Topps.html">Details</a></td>
 </tr>
 
 <tr>
@@ -21750,6 +21939,13 @@
 <td>1985</td>
 <td>AC Comics</td>
 <td><a href="ACComics/ACComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Dragonheart</td>
+<td>1996</td>
+<td>Topps</td>
+<td><a href="Topps/Topps.html">Details</a></td>
 </tr>
 
 <tr>
@@ -22131,6 +22327,20 @@
 </tr>
 
 <tr>
+<td>Duckman</td>
+<td>1994</td>
+<td>Topps</td>
+<td><a href="Topps/Topps.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Duckman: The Mob Frog Saga</td>
+<td>1994</td>
+<td>Topps</td>
+<td><a href="Topps/Topps.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Dudley Do-Right</td>
 <td>1970</td>
 <td>Charlton</td>
@@ -22383,6 +22593,13 @@
 </tr>
 
 <tr>
+<td>Eat Shit Or Die!</td>
+<td>1993</td>
+<td>Starhead</td>
+<td><a href="StarheadComix/StarheadComix.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Eaters</td>
 <td>1995</td>
 <td>Vertigo</td>
@@ -22471,6 +22688,13 @@
 <td>1993</td>
 <td>Marvel</td>
 <td><a href="Ectokid/Ectokid.html">Details</a> </td>
+</tr>
+
+<tr>
+<td>Ed "Big Daddy" Roth's Rat Fink Comix</td>
+<td>1987</td>
+<td>Starhead</td>
+<td><a href="StarheadComix/StarheadComix.html">Details</a></td>
 </tr>
 
 <tr>
@@ -23003,6 +23227,13 @@
 <td>1986</td>
 <td>First Comics</td>
 <td><a href="FirstComics/FirstComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Elric - One Life</td>
+<td>1996</td>
+<td>Topps</td>
+<td><a href="Topps/Topps.html">Details</a></td>
 </tr>
 
 <tr>
@@ -23860,6 +24091,13 @@
 </tr>
 
 <tr>
+<td>Exosquad</td>
+<td>1994</td>
+<td>Topps</td>
+<td><a href="Topps/Topps.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Expansion</td>
 <td>2017</td>
 <td>AdHouse</td>
@@ -23934,6 +24172,13 @@
 <td>2001</td>
 <td>Avatar</td>
 <td><a href="AvatarPress/AvatarPress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Exquisite Corpse Comix</td>
+<td>1985</td>
+<td>Starhead</td>
+<td><a href="StarheadComix/StarheadComix.html">Details</a></td>
 </tr>
 
 <tr>
@@ -31481,6 +31726,13 @@
 </tr>
 
 <tr>
+<td>Hemp For Victory</td>
+<td>1993</td>
+<td>Starhead</td>
+<td><a href="StarheadComix/StarheadComix.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Hench</td>
 <td>2004</td>
 <td>AIT Planet Lar</td>
@@ -31758,6 +32010,13 @@
 <td>2001</td>
 <td>Drawn &amp; Quarterly</td>
 <td><a href="DrawnQuarterly/DrawnQuarterly.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Hidden World</td>
+<td>1996</td>
+<td>Starhead</td>
+<td><a href="StarheadComix/StarheadComix.html">Details</a></td>
 </tr>
 
 <tr>
@@ -33942,6 +34201,13 @@
 <td>1965</td>
 <td>Creator</td>
 <td><a href="JHWilliams/JHWilliams.html">Details</a></td>
+</tr>
+
+<tr>
+<td>J.R. Williams' Fun House</td>
+<td>1993</td>
+<td>Starhead</td>
+<td><a href="StarheadComix/StarheadComix.html">Details</a></td>
 </tr>
 
 <tr>
@@ -43401,6 +43667,13 @@
 </tr>
 
 <tr>
+<td>Morty The Dog</td>
+<td>1987</td>
+<td>Starhead</td>
+<td><a href="StarheadComix/StarheadComix.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Morty The Dog</a>
 <td>1991</td>
 <td>MU Press</td>
@@ -43849,6 +44122,20 @@
 </tr>
 
 <tr>
+<td>Mutant Book Of The Dead</td>
+<td>1994</td>
+<td>Starhead</td>
+<td><a href="StarheadComix/StarheadComix.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Mutant Earth</td>
+<td>2002</td>
+<td>Image</td>
+<td><a href="Image/image.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Mutant Misadventures Of Cloak And Dagger</td>
 <td>1983</td>
 <td>Marvel</td>
@@ -43860,13 +44147,6 @@
 <td>1998</td>
 <td>Marvel</td>
 <td><a href="MutantX/MutantX.html">Details</a></td>
-</tr>
-
-<tr>
-<td>Mutant Earth</td>
-<td>2002</td>
-<td>Image</td>
-<td><a href="Image/image.html">Details</a></td>
 </tr>
 
 <tr>
@@ -44021,6 +44301,13 @@
 <td>1948</td>
 <td>Fox Comics</td>
 <td><a href="FoxPublications/FoxPublications.html">Details</a></td>
+</tr>
+
+<tr>
+<td>My Life With The Squirrels</td>
+<td>1993</td>
+<td>Starhead</td>
+<td><a href="StarheadComix/StarheadComix.html">Details</a></td>
 </tr>
 
 <tr>
@@ -45666,6 +45953,13 @@
 <td>1989</td>
 <td>Publisher</td>
 <td><a href="NorthstarPublishing/NorthstarPublishing.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Northwest Cartoon Cookery</td>
+<td>1995</td>
+<td>Starhead</td>
+<td><a href="StarheadComix/StarheadComix.html">Details</a></td>
 </tr>
 
 <tr>
@@ -47949,6 +48243,13 @@
 </tr>
 
 <tr>
+<td>Planet Of Geeks</td>
+<td>1994</td>
+<td>Starhead</td>
+<td><a href="StarheadComix/StarheadComix.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Planet Of The Apes</td>
 <td>1963</td>
 <td>Fox</td>
@@ -49904,6 +50205,13 @@
 <td>1988</td>
 <td>Eclipse</td>
 <td><a href="Eclipse/Eclipse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Real Schmuck</td>
+<td>1993</td>
+<td>Starhead</td>
+<td><a href="StarheadComix/StarheadComix.html">Details</a></td>
 </tr>
 
 <tr>
@@ -52951,6 +53259,13 @@
 <td>2005</td>
 <td>Image</td>
 <td><a href="Image/image.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Seattle Star</td>
+<td>1985</td>
+<td>Starhead</td>
+<td><a href="StarheadComix/StarheadComix.html">Details</a></td>
 </tr>
 
 <tr>
@@ -56341,6 +56656,13 @@
 </tr>
 
 <tr>
+<td>Starhead Comix</td>
+<td>1984</td>
+<td>Publisher</td>
+<td><a href="StarheadComix/StarheadComix.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Starjammers</td>
 <td>1995</td>
 <td>Marvel</td>
@@ -56674,6 +56996,13 @@
 <td>1991</td>
 <td>Fantagraphics</td>
 <td><a href="Stickboy/Stickboy.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Stickboy</td>
+<td>1993</td>
+<td>Starhead</td>
+<td><a href="StarheadComix/StarheadComix.html">Details</a></td>
 </tr>
 
 <tr>
@@ -58777,6 +59106,13 @@
 </tr>
 
 <tr>
+<td>Testosterone City</td>
+<td>1990</td>
+<td>Starhead</td>
+<td><a href="StarheadComix/StarheadComix.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Tex Avery</td>
 <td>1908</td>
 <td>WarnerBros</td>
@@ -59155,6 +59491,13 @@
 </tr>
 
 <tr>
+<td>Tijuana Bible</td>
+<td>1994</td>
+<td>Starhead</td>
+<td><a href="StarheadComix/StarheadComix.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Tijuana Bibles</td>
 <td>1996</td>
 <td>Fantagraphics</td>
@@ -59460,6 +59803,13 @@
 <td>1937</td>
 <td>Creator</td>
 <td><a href="TomSutton/TomSutton.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Tomato</td>
+<td>1994</td>
+<td>Starhead</td>
+<td><a href="StarheadComix/StarheadComix.html">Details</a></td>
 </tr>
 
 <tr>
