--- a/index.html
+++ b/index.html
@@ -5864,6 +5864,12 @@
 <td><a href="Image/image.html">Details</a></td>
 </tr>
 
+<td>Arkanium</td>
+<td>1996</td>
+<td>Dreamwave</td>
+<td><a href="Dreamwave/Dreamwave.html">Details</a></td>
+</tr>
+
 <tr>
 <td>Armageddon</td>
 <td>1970</td>
@@ -8018,6 +8024,12 @@
 <td>2001</td>
 <td>Image</td>
 <td><a href="Image/image.html">Details</a></td>
+</tr>
+
+<td>Banished Knights</td>
+<td>2002</td>
+<td>Dreamwave</td>
+<td><a href="Dreamwave/Dreamwave.html">Details</a></td>
 </tr>
 
 <tr>
@@ -18868,6 +18880,12 @@
 <td><a href="Image/image.html">Details</a></td>
 </tr>
 
+<td>Darkminds: Macropolis</td>
+<td>2002</td>
+<td>Dreamwave</td>
+<td><a href="Dreamwave/Dreamwave.html">Details</a></td>
+</tr>
+
 <tr>
 <td>Darkness Falls, The Tragic Life Of Mathilda Dixon</td>
 <td>2003</td>
@@ -20287,6 +20305,12 @@
 <td>1962</td>
 <td>Harvey</td>
 <td><a href="HarveyComics/HarveyComics.html">Details</a></td>
+</tr>
+
+<td>Devil May Cry</td>
+<td>2004</td>
+<td>Dreamwave</td>
+<td><a href="Dreamwave/Dreamwave.html">Details</a></td>
 </tr>
 
 <tr>
@@ -22187,6 +22211,12 @@
 <td><a href="AvatarPress/AvatarPress.html">Details</a></td>
 </tr>
 
+<td>Dreamwave Comics</td>
+<td>1996</td>
+<td>Publisher</td>
+<td><a href="Dreamwave/Dreamwave.html">Details</a></td>
+</tr>
+
 <td>Dreamworks</td>
 <td>1994</td>
 <td>Publisher</td>
@@ -22352,6 +22382,12 @@
 <td>2005</td>
 <td>Antarctic Press</td>
 <td><a href="AntarcticPress/AntarcticPress.html">Details</a></td>
+</tr>
+
+<td>Duel Masters</td>
+<td>2003</td>
+<td>Dreamwave</td>
+<td><a href="Dreamwave/Dreamwave.html">Details</a></td>
 </tr>
 
 <tr>
@@ -25082,6 +25118,12 @@
 <td>2012</td>
 <td>Image</td>
 <td><a href="Fatale/Fatale.html">Details</a></td>
+</tr>
+
+<td>Fate Of The Blade</td>
+<td>2002</td>
+<td>Dreamwave</td>
+<td><a href="Dreamwave/Dreamwave.html">Details</a></td>
 </tr>
 
 <tr>
@@ -41589,6 +41631,12 @@
 <td><a href="Image/image.html">Details</a></td>
 </tr>
 
+<td>Maximo</td>
+<td>2004</td>
+<td>Dreamwave</td>
+<td><a href="Dreamwave/Dreamwave.html">Details</a></td>
+</tr>
+
 <tr>
 <td>Maximortal</td>
 <td>1992</td>
@@ -41825,6 +41873,12 @@
 <td>1989</td>
 <td>Continuity</td>
 <td><a href="ContinuityComics/ContinuityComics.html">Details</a></td>
+</tr>
+
+<td>MegaMan</td>
+<td>2003</td>
+<td>Dreamwave</td>
+<td><a href="Dreamwave/Dreamwave.html">Details</a></td>
 </tr>
 
 <tr>
@@ -44924,6 +44978,12 @@
 <td>1994</td>
 <td>Fathom</td>
 <td><a href="FathomPress/FathomPress.html">Details</a></td>
+</tr>
+
+<td>Necrowar</td>
+<td>2003</td>
+<td>Dreamwave</td>
+<td><a href="Dreamwave/Dreamwave.html">Details</a></td>
 </tr>
 
 <tr>
@@ -54241,6 +54301,12 @@
 <td><a href="Tidalwave/Tidalwave.html">Details</a></td>
 </tr>
 
+<td>Shidima</td>
+<td>2002</td>
+<td>Dreamwave</td>
+<td><a href="Dreamwave/Dreamwave.html">Details</a></td>
+</tr>
+
 <tr>
 <td>Shield: Spotlight</td>
 <td>2004</td>
@@ -58818,6 +58884,12 @@
 <td><a href="Image/image.html">Details</a></td>
 </tr>
 
+<td>Teenage Mutant Ninja Turtles</td>
+<td>2003</td>
+<td>Dreamwave</td>
+<td><a href="Dreamwave/Dreamwave.html">Details</a></td>
+</tr>
+
 <tr>
 <td>Teenage Mutant Ninja Turtles</td>
 <td>2011</td>
@@ -60167,6 +60239,66 @@
 <td>2009</td>
 <td>IDW</td>
 <td><a href="IDW/IDW.html">Details</a></td>
+</tr>
+
+<td>Transformers / G.I. Joe</td>
+<td>2003</td>
+<td>Dreamwave</td>
+<td><a href="Dreamwave/Dreamwave.html">Details</a></td>
+</tr>
+
+<td>Transformers Armada</td>
+<td>2002</td>
+<td>Dreamwave</td>
+<td><a href="Dreamwave/Dreamwave.html">Details</a></td>
+</tr>
+
+<td>Transformers Energon</td>
+<td>2004</td>
+<td>Dreamwave</td>
+<td><a href="Dreamwave/Dreamwave.html">Details</a></td>
+</tr>
+
+<td>Transformers Generation One: More Than Meets The Eye</td>
+<td>2004</td>
+<td>Dreamwave</td>
+<td><a href="Dreamwave/Dreamwave.html">Details</a></td>
+</tr>
+
+<td>Transformers Micromasters</td>
+<td>2004</td>
+<td>Dreamwave</td>
+<td><a href="Dreamwave/Dreamwave.html">Details</a></td>
+</tr>
+
+<td>Transformers Poster Book</td>
+<td>2004</td>
+<td>Dreamwave</td>
+<td><a href="Dreamwave/Dreamwave.html">Details</a></td>
+</tr>
+
+<td>Transformers Summer Special</td>
+<td>2003</td>
+<td>Dreamwave</td>
+<td><a href="Dreamwave/Dreamwave.html">Details</a></td>
+</tr>
+
+<td>Transformers War Within</td>
+<td>2002</td>
+<td>Dreamwave</td>
+<td><a href="Dreamwave/Dreamwave.html">Details</a></td>
+</tr>
+
+<td>Transformers: Generation 1</td>
+<td>2002</td>
+<td>Dreamwave</td>
+<td><a href="Dreamwave/Dreamwave.html">Details</a></td>
+</tr>
+
+<td>Transformers: More Than Meets The Eye</td>
+<td>2003</td>
+<td>Dreamwave</td>
+<td><a href="Dreamwave/Dreamwave.html">Details</a></td>
 </tr>
 
 <tr>
@@ -63093,6 +63225,18 @@
 <td>1999</td>
 <td>Image</td>
 <td><a href="Image/image.html">Details</a></td>
+</tr>
+
+<td>Warlands: Age Of Ice</td>
+<td>2003</td>
+<td>Dreamwave</td>
+<td><a href="Dreamwave/Dreamwave.html">Details</a></td>
+</tr>
+
+<td>Warlands: Dark Tide Rising</td>
+<td>2002</td>
+<td>Dreamwave</td>
+<td><a href="Dreamwave/Dreamwave.html">Details</a></td>
 </tr>
 
 <tr>
