--- a/EternityComics/EternityComics.html
+++ b/EternityComics/EternityComics.html
@@ -194,7 +194,7 @@ Titles
 <li><a href="EternityComics9.jpg">Blood Junkies On Captiol Hill</a> (1991)
 <li><a href="EternityComics10.jpg">Blood Wing</a> (1988)
 <li><a href="EternityComics11.jpg">Blood Brothers</a> (1988)
-<li><a href="EternityComics11a.jpg">Borderguard (1987)
+<li><a href="EternityComics11a.jpg">Borderguard</a> (1987)
 <li><a href="EternityComics12.jpg">Broid</a> (1990)
 <li><a href="EternityComics13.jpg">Bronx</a> (1991)
 <li><a href="EternityComics14.jpg">Captain Harlock</a> (1989)
@@ -222,6 +222,7 @@ Titles
 <li><a href="EternityComics33.jpg">Dollman</a> (1991)
 <li><a href="EternityComics34.jpg">Dracula</a> (1989)
 <li><a href="EternityComics35.jpg">Dracula: The Lady In The Tomb</a> (1991)
+<li><a href="EternityComics62.jpg">Earthlore</a> (1986)
 <li><a href="EternityComics36.jpg">Edgar Allan Poe: The Black Cat And Other Stories</a> (1989)
 <li><a href="EternityComics37.jpg">Edgar Allan Poe: The Masque Of Red Death And Other Stories</a> (1989)
 <li><a href="EternityComics38.jpg">Edgar Allan Poe: The Murders In The Rue Morgue And Other Stories</a> (1989)
@@ -232,7 +233,6 @@ Titles
 <li><a href="EternityComics43.jpg">Emeraldas</a> (1990)
 <li><a href="EternityComics44.jpg">Empire</a> (1992)
 <li><a href="EternityComics45.jpg">Eternity Triple Action</a> (1993)
-<li><a href="EternityComics62.jpg">Earthlore</a> (1986)
 <li><a href="EternityComics46.jpg">Evil Ernie</a> (1991)
 <li><a href="EternityComics47.jpg">Ex-Mutants</a> (1987)
 <li><a href="EternityComics48.jpg">Fifties Terror</a> (1988)
