--- a/index.html
+++ b/index.html
@@ -50415,6 +50415,13 @@
 </tr>
 
 <tr>
+<td>Providence</td>
+<td>2015</td>
+<td>Avatar</td>
+<td><a href="AvatarPress/AvatarPress.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Prowler</td>
 <td>1987</td>
 <td>Eclipse</td>
@@ -50758,6 +50765,13 @@
 </tr>
 
 <tr>
+<td>Quantum Mechanics</td>
+<td>1999</td>
+<td>Avatar</td>
+<td><a href="AvatarPress/AvatarPress.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Quantum Teens Are Go</td>
 <td>2017</td>
 <td>Black Mask</td>
@@ -50811,6 +50825,13 @@
 <td>1997</td>
 <td>Marvel</td>
 <td><a href="Quicksilver/Quicksilver.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Quit City</td>
+<td>2004</td>
+<td>Avatar</td>
+<td><a href="AvatarPress/AvatarPress.html">Details</a></td>
 </tr>
 
 <tr>
@@ -51171,6 +51192,13 @@
 </tr>
 
 <tr>
+<td>Ravening</td>
+<td>1997</td>
+<td>Avatar</td>
+<td><a href="AvatarPress/AvatarPress.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Ravens And Rainbows</td>
 <td>1983</td>
 <td>Pacific Comics</td>
@@ -51189,6 +51217,13 @@
 <td>2004</td>
 <td>Last Gasp</td>
 <td><a href="LastGasp/LastGasp.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Rawbone</td>
+<td>2009</td>
+<td>Avatar</td>
+<td><a href="AvatarPress/AvatarPress.html">Details</a></td>
 </tr>
 
 <tr>
@@ -51224,6 +51259,41 @@
 <td>2019</td>
 <td>Arcana</td>
 <td><a href="ArcanaComics/ArcanaComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Razor Til I Bleed Daylight</td>
+<td>2000</td>
+<td>Avatar</td>
+<td><a href="AvatarPress/AvatarPress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Razor X</td>
+<td>2002</td>
+<td>Avatar</td>
+<td><a href="AvatarPress/AvatarPress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Razor: Bleeding Heart</td>
+<td>2001</td>
+<td>Avatar</td>
+<td><a href="AvatarPress/AvatarPress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Razor: The Furies</td>
+<td>2000</td>
+<td>Avatar</td>
+<td><a href="AvatarPress/AvatarPress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Razor: The Ravening</td>
+<td>1999</td>
+<td>Avatar</td>
+<td><a href="AvatarPress/AvatarPress.html">Details</a></td>
 </tr>
 
 <tr>
@@ -52045,6 +52115,13 @@
 </tr>
 
 <tr>
+<td>Rich Johnston's Holed Up</td>
+<td>2004</td>
+<td>Avatar</td>
+<td><a href="AvatarPress/AvatarPress.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Rich Johnston's Iron Muslim</td>
 <td>2012</td>
 <td>Boom!</td>
@@ -52527,7 +52604,7 @@
 </tr>
 
 <tr>
-<td>RoboCop</td>
+<td>Robocop</td>
 <td>1987</td>
 <td>Orion</td>
 <td><a href="RoboCop/RoboCop.html">Details</a></td>
@@ -52576,6 +52653,13 @@
 </tr>
 
 <tr>
+<td>Robocop: Killing Machine</td>
+<td>2004</td>
+<td>Avatar</td>
+<td><a href="AvatarPress/AvatarPress.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Robocop: Last Stand</td>
 <td>2013</td>
 <td>Boom!</td>
@@ -52594,6 +52678,13 @@
 <td>2012</td>
 <td>Dynamite</td>
 <td><a href="Dynamite/Dynamite.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Robocop: Wild Child</td>
+<td>2005</td>
+<td>Avatar</td>
+<td><a href="AvatarPress/AvatarPress.html">Details</a></td>
 </tr>
 
 <tr>
@@ -53111,6 +53202,13 @@
 <td>2002</td>
 <td>CrossGen</td>
 <td><a href="CrossGen/CrossGen.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Rover Red Charlie</td>
+<td>2013</td>
+<td>Avatar</td>
+<td><a href="AvatarPress/AvatarPress.html">Details</a></td>
 </tr>
 
 <tr>
@@ -53959,6 +54057,20 @@
 </tr>
 
 <tr>
+<td>Scars</td>
+<td>2002</td>
+<td>Avatar</td>
+<td><a href="AvatarPress/AvatarPress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Scars Sampler</td>
+<td>2002</td>
+<td>Avatar</td>
+<td><a href="AvatarPress/AvatarPress.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Scary Tales</td>
 <td>1975</td>
 <td>Charlton</td>
@@ -54614,6 +54726,13 @@
 <td>2018</td>
 <td>Valiant</td>
 <td><a href="ValiantComics/ValiantComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Secrets Of The Ravening</td>
+<td>1999</td>
+<td>Avatar</td>
+<td><a href="AvatarPress/AvatarPress.html">Details</a></td>
 </tr>
 
 <tr>
@@ -55435,6 +55554,34 @@
 <td><a href="Tidalwave/Tidalwave.html">Details</a></td>
 </tr>
 
+<tr>
+<td>Shi: Pandora's Box</td>
+<td>2003</td>
+<td>Avatar</td>
+<td><a href="AvatarPress/AvatarPress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Shi: Pandora's Box Preview</td>
+<td>2003</td>
+<td>Avatar</td>
+<td><a href="AvatarPress/AvatarPress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Shi: Poisoned Paradise</td>
+<td>2002</td>
+<td>Avatar</td>
+<td><a href="AvatarPress/AvatarPress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Shi: Sempo</td>
+<td>2003</td>
+<td>Avatar</td>
+<td><a href="AvatarPress/AvatarPress.html">Details</a></td>
+</tr>
+
 <td>Shidima</td>
 <td>2002</td>
 <td>Dreamwave</td>
@@ -55460,6 +55607,13 @@
 <td>2014</td>
 <td>Drawn &amp; Quarterly</td>
 <td><a href="DrawnQuarterly/DrawnQuarterly.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Shimmer</td>
+<td>1998</td>
+<td>Avatar</td>
+<td><a href="AvatarPress/AvatarPress.html">Details</a></td>
 </tr>
 
 <tr>
@@ -55757,6 +55911,13 @@
 </tr>
 
 <tr>
+<td>Sihouette Special</td>
+<td>1997</td>
+<td>Avatar</td>
+<td><a href="AvatarPress/AvatarPress.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Silent Hill: Among The Damned</td>
 <td>2004</td>
 <td>IDW</td>
@@ -55858,6 +56019,13 @@
 <td>1990?</td>
 <td>Creator</td>
 <td><a href="SimonHanselmann/SimonHanselmann.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Simon Spector</td>
+<td>2004</td>
+<td>Avatar</td>
+<td><a href="AvatarPress/AvatarPress.html">Details</a></td>
 </tr>
 
 <tr>
@@ -56068,6 +56236,13 @@
 <td>1993</td>
 <td>Vertigo</td>
 <td><a href="Vertigo/Vertigo.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Skin Trade</td>
+<td>2013</td>
+<td>Avatar</td>
+<td><a href="AvatarPress/AvatarPress.html">Details</a></td>
 </tr>
 
 <tr>
@@ -56414,6 +56589,13 @@
 </tr>
 
 <tr>
+<td>Small Killing</td>
+<td>2003</td>
+<td>Avatar</td>
+<td><a href="AvatarPress/AvatarPress.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Small Press Expo (SPX)</td>
 <td>1994</td>
 <td>Publisher</td>
@@ -56568,6 +56750,41 @@
 </tr>
 
 <tr>
+<td>Snowman</td>
+<td>1997</td>
+<td>Avatar</td>
+<td><a href="AvatarPress/AvatarPress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Snowman 1944 Special</td>
+<td>1997</td>
+<td>Avatar</td>
+<td><a href="AvatarPress/AvatarPress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Snowman Dead And Dying</td>
+<td>1997</td>
+<td>Avatar</td>
+<td><a href="AvatarPress/AvatarPress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Snowman Horror Show</td>
+<td>1998</td>
+<td>Avatar</td>
+<td><a href="AvatarPress/AvatarPress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Snowman Squared</td>
+<td>1998</td>
+<td>Avatar</td>
+<td><a href="AvatarPress/AvatarPress.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Sof' Boy And Friends</td>
 <td>1997</td>
 <td>Drawn &amp; Quarterly</td>
@@ -56579,6 +56796,13 @@
 <td>2001</td>
 <td>CrossGen</td>
 <td><a href="CrossGen/CrossGen.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Solace</td>
+<td>1999</td>
+<td>Avatar</td>
+<td><a href="AvatarPress/AvatarPress.html">Details</a></td>
 </tr>
 
 <tr>
@@ -57877,6 +58101,20 @@
 </tr>
 
 <tr>
+<td>Stargate Atlantis Wraithfall</td>
+<td>1997</td>
+<td>Avatar</td>
+<td><a href="AvatarPress/AvatarPress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Stargate SG-1 2004 Convention Special</td>
+<td>2004</td>
+<td>Avatar</td>
+<td><a href="AvatarPress/AvatarPress.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Stargate Universe</td>
 <td>2017</td>
 <td>American Mythology</td>
@@ -58339,6 +58577,13 @@
 </tr>
 
 <tr>
+<td>Stitched</td>
+<td>2011</td>
+<td>Avatar</td>
+<td><a href="AvatarPress/AvatarPress.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Stoker's Dracula</td>
 <td>2004</td>
 <td>Marvel</td>
@@ -58511,6 +58756,62 @@
 <td>2005</td>
 <td>Image</td>
 <td><a href="Image/image.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Strange Killings</td>
+<td>2002</td>
+<td>Avatar</td>
+<td><a href="AvatarPress/AvatarPress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Strange Killings: Body Orchard</td>
+<td>2003</td>
+<td>Avatar</td>
+<td><a href="AvatarPress/AvatarPress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Strange Killings: Necromancer</td>
+<td>2004</td>
+<td>Avatar</td>
+<td><a href="AvatarPress/AvatarPress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Strange Killings: Strong Medicine</td>
+<td>2003</td>
+<td>Avatar</td>
+<td><a href="AvatarPress/AvatarPress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Strange Killings: The Body Orchard</td>
+<td>2002</td>
+<td>Avatar</td>
+<td><a href="AvatarPress/AvatarPress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Strange Kiss</td>
+<td>1999</td>
+<td>Avatar</td>
+<td><a href="AvatarPress/AvatarPress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Strange Kiss Collected</td>
+<td>2000</td>
+<td>Avatar</td>
+<td><a href="AvatarPress/AvatarPress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Strange Kisses</td>
+<td>2000</td>
+<td>Avatar</td>
+<td><a href="AvatarPress/AvatarPress.html">Details</a></td>
 </tr>
 
 <tr>
@@ -58763,6 +59064,13 @@
 <td>1986</td>
 <td>Blackthorne</td>
 <td><a href="Blackthorne/Blackthorne.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Streets Of Glory</td>
+<td>2009</td>
+<td>Avatar</td>
+<td><a href="AvatarPress/AvatarPress.html">Details</a></td>
 </tr>
 
 <tr>
@@ -59218,6 +59526,13 @@
 <td>2016</td>
 <td>DC</td>
 <td><a href="DCComics/DCComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Supergod Collected Edition</td>
+<td>2011</td>
+<td>Avatar</td>
+<td><a href="AvatarPress/AvatarPress.html">Details</a></td>
 </tr>
 
 <tr>
@@ -60410,6 +60725,27 @@
 </tr>
 
 <tr>
+<td>Texas Chainsaw Massacre Special</td>
+<td>2005</td>
+<td>Avatar</td>
+<td><a href="AvatarPress/AvatarPress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Texas Chainsaw Massacre: Fearbook</td>
+<td>2006</td>
+<td>Avatar</td>
+<td><a href="AvatarPress/AvatarPress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Texas Chainsaw Massacre: The Grind</td>
+<td>2006</td>
+<td>Avatar</td>
+<td><a href="AvatarPress/AvatarPress.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Texas Kid</td>
 <td>1951</td>
 <td>Marvel</td>
@@ -60648,6 +60984,20 @@
 </tr>
 
 <tr>
+<td>Threshold</td>
+<td>1998</td>
+<td>Avatar</td>
+<td><a href="AvatarPress/AvatarPress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Threshold: Mystic Sirens Pinups</td>
+<td>2007</td>
+<td>Avatar</td>
+<td><a href="AvatarPress/AvatarPress.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Thrill-O-Rama</td>
 <td>1965</td>
 <td>Harvey</td>
@@ -60848,6 +61198,13 @@
 <td>1960</td>
 <td>Creator</td>
 <td><a href="TimVigil/TimVigil.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Tim Vigil's Webwitch</td>
+<td>2002</td>
+<td>Avatar</td>
+<td><a href="AvatarPress/AvatarPress.html">Details</a></td>
 </tr>
 
 <tr>
@@ -62010,6 +62367,13 @@
 </tr>
 
 <tr>
+<td>Twilight</td>
+<td>1997</td>
+<td>Avatar</td>
+<td><a href="AvatarPress/AvatarPress.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Twilight Avenger</td>
 <td>1986</td>
 <td>Elite</td>
@@ -62028,6 +62392,13 @@
 <td>2015</td>
 <td>Vertigo</td>
 <td><a href="Vertigo/Vertigo.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Twilight Live Wire</td>
+<td>1997</td>
+<td>Avatar</td>
+<td><a href="AvatarPress/AvatarPress.html">Details</a></td>
 </tr>
 
 <tr>
@@ -62231,6 +62602,34 @@
 <td>2001</td>
 <td>Marvel</td>
 <td><a href="USWarMachine/USWarMachine.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Uber</td>
+<td>2013</td>
+<td>Avatar</td>
+<td><a href="Uber/Uber.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Uber FCBD</td>
+<td>2014</td>
+<td>Avatar</td>
+<td><a href="AvatarPress/AvatarPress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Uber Invasion</td>
+<td>2016</td>
+<td>Avatar</td>
+<td><a href="UberInvasion/UberInvasion.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Uber Special</td>
+<td>2014</td>
+<td>Avatar</td>
+<td><a href="AvatarPress/AvatarPress.html">Details</a></td>
 </tr>
 
 <tr>
@@ -62658,6 +63057,13 @@
 <td>2015</td>
 <td>Vertigo</td>
 <td><a href="Unfollow/Unfollow.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Unholy</td>
+<td>2014</td>
+<td>Avatar</td>
+<td><a href="AvatarPress/AvatarPress.html">Details</a></td>
 </tr>
 
 <tr>
@@ -64299,6 +64705,13 @@
 </tr>
 
 <tr>
+<td>War Angel</td>
+<td>2007</td>
+<td>Avatar</td>
+<td><a href="AvatarPress/AvatarPress.html">Details</a></td>
+</tr>
+
+<tr>
 <td>War Battles</td>
 <td>1952</td>
 <td>Harvey</td>
@@ -64338,6 +64751,13 @@
 <td>1952</td> 
 <td>Avon</td>
 <td><a href="Avon/Avon.html">Details</a></td>
+</tr>
+
+<tr>
+<td>War Goddess</td>
+<td>2011</td>
+<td>Avatar</td>
+<td><a href="AvatarPress/AvatarPress.html">Details</a></td>
 </tr>
 
 <tr>
@@ -64408,6 +64828,13 @@
 <td>1998</td>
 <td>Arrow</td>
 <td><a href="ArrowComics/ArrowComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>War Stories</td>
+<td>2014</td>
+<td>Avatar</td>
+<td><a href="AvatarPress/AvatarPress.html">Details</a></td>
 </tr>
 
 <tr>
@@ -64640,6 +65067,13 @@
 </tr>
 
 <tr>
+<td>Warren Commission Report</td>
+<td>2014</td>
+<td>Abrams</td>
+<td><a href="AbramsBooks/AbramsBooks.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Warren Ellis</td>
 <td>1968</td>
 <td>Creator</td>
@@ -64647,10 +65081,59 @@
 </tr>
 
 <tr>
-<td>Warren Commission Report</td>
-<td>2014</td>
-<td>Abrams</td>
-<td><a href="AbramsBooks/AbramsBooks.html">Details</a></td>
+<td>Warren Ellis Blackgas</td>
+<td>2006</td>
+<td>Avatar</td>
+<td><a href="AvatarPress/AvatarPress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Warren Ellis Blackgas2</td>
+<td>2006</td>
+<td>Avatar</td>
+<td><a href="AvatarPress/AvatarPress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Warren Ellis Wolfskin Collection</td>
+<td>2009</td>
+<td>Avatar</td>
+<td><a href="AvatarPress/AvatarPress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Warren Ellis' Apparat Preview</td>
+<td>2004</td>
+<td>Avatar</td>
+<td><a href="AvatarPress/AvatarPress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Warren Ellis' Ignition City</td>
+<td>2009</td>
+<td>Avatar</td>
+<td><a href="AvatarPress/AvatarPress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Warren Ellis' Supergod</td>
+<td>2009</td>
+<td>Avatar</td>
+<td><a href="AvatarPress/AvatarPress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Warren Ellis' Wolfskin</td>
+<td>2006</td>
+<td>Avatar</td>
+<td><a href="AvatarPress/AvatarPress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Warren Ellis' Wolfskin Annual</td>
+<td>2008</td>
+<td>Avatar</td>
+<td><a href="AvatarPress/AvatarPress.html">Details</a></td>
 </tr>
 
 <tr>
@@ -64672,6 +65155,13 @@
 <td>1994</td>
 <td>Antarctic Press</td>
 <td><a href="AntarcticPress/AntarcticPress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Warrior Nun: Dora</td>
+<td>2019</td>
+<td>Avatar</td>
+<td><a href="AvatarPress/AvatarPress.html">Details</a></td>
 </tr>
 
 <tr>
@@ -64889,6 +65379,41 @@
 <td>1951</td>
 <td>Ace</td>
 <td><a href="WebOfMystery/WebOfMystery.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Webwitch</td>
+<td>1997</td>
+<td>Avatar</td>
+<td><a href="AvatarPress/AvatarPress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Webwitch Companion</td>
+<td>2002</td>
+<td>Avatar</td>
+<td><a href="AvatarPress/AvatarPress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Webwitch Prelude To War</td>
+<td>1998</td>
+<td>Avatar</td>
+<td><a href="AvatarPress/AvatarPress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Webwitch Trade Paperback</td>
+<td>2004</td>
+<td>Avatar</td>
+<td><a href="AvatarPress/AvatarPress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Webwitch War</td>
+<td>1998</td>
+<td>Avatar</td>
+<td><a href="AvatarPress/AvatarPress.html">Details</a></td>
 </tr>
 
 <tr>
@@ -65508,6 +66033,20 @@
 </tr>
 
 <tr>
+<td>Widow</td>
+<td>1997</td>
+<td>Avatar</td>
+<td><a href="AvatarPress/AvatarPress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Widow The Origin</td>
+<td>1997</td>
+<td>Avatar</td>
+<td><a href="AvatarPress/AvatarPress.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Widow Warriors</td>
 <td>2010</td>
 <td>Dynamite</td>
@@ -66089,6 +66628,20 @@
 </tr>
 
 <tr>
+<td>Wolfskin</td>
+<td>2011</td>
+<td>Avatar</td>
+<td><a href="AvatarPress/AvatarPress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Wolfskin: Hundredth Dream</td>
+<td>2010</td>
+<td>Avatar</td>
+<td><a href="AvatarPress/AvatarPress.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Wolph</td>
 <td>1987</td>
 <td>Blackthorne</td>
@@ -66352,6 +66905,13 @@
 <td>2015</td>
 <td>Valiant</td>
 <td><a href="ValiantComics/ValiantComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Wrath Of The Furies</td>
+<td>1997</td>
+<td>Avatar</td>
+<td><a href="AvatarPress/AvatarPress.html">Details</a></td>
 </tr>
 
 <tr>
@@ -67031,6 +67591,13 @@
 <td>1996</td>
 <td>Toei</td>
 <td><a href="YuGiOh/YuGiOh.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Yuggoth Creatures</td>
+<td>2004</td>
+<td>Avatar</td>
+<td><a href="AvatarPress/AvatarPress.html">Details</a></td>
 </tr>
 
 <tr>
